# gateway-esp

./: CMakeLists.txt  README.md  gateway-esp.rar  sdkconfig  sdkconfig.old
components/espressif__usb_host_uvc/: CMakeLists.txt
components/espressif__usb_host_uvc/libuvc/: CMakeLists.txt
components/espressif__usb_host_uvc/libuvc/src/: diag.c  stream.c
components/espressif__usb_host_uvc/src/: descriptor.c
main/: CMakeLists.txt  Kconfig.projbuild  keep_alive.c  main.c
main/barcode_scanner/: barcode.c  barcode.h
main/camera/: usb_camera.c  usb_camera.h
main/led_matrix/: led_device.c  led_device.h
main/printer/: ESC.c  ESC.h
main/relay/: relay.c  relay.h
main/trigger/: trigger.c  trigger.h  trigger2.c
protocol_examples_common/protocol_examples_common/: CMakeLists.txt  Kconfig.projbuild  connect.c  esp_eth_mac_enc28j60.c  eth_connect.c  stdin_out.c  wifi_connect.c
protocol_examples_common/protocol_examples_common/include/: esp_eth_enc28j60.h  example_common_private.h
test_tools/: get_status.py  test.py  ws_print_test.py  ws_test.py
